--- a/Intro_NN/vine.ipynb
+++ b/Intro_NN/vine.ipynb
@@ -706,6 +706,18 @@
     "rmse_test = mean_squared_error(y_test, y_hat.detach().numpy(), squared=False)\n",
     "rmse_test.item()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define Get Batch Function\n",
+    "def get_batch(x, y, batch_size):\n",
+    "    random_index = np.random.choice(len(x), size=batch_size)\n",
+    "    return x[random_index], y[random_index]"
+   ]
   }
  ],
  "metadata": {
