--- a/CarPrice_NN/carprice.ipynb
+++ b/CarPrice_NN/carprice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4     11.5@ 4,500(kgm@ rpm)    5.0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,6 +171,281 @@
     "\n",
     "# Import Dataset from CSV File in Data Folder\n",
     "data=pd.read_csv(\"data/cardetailsv3.csv\")\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8128 entries, 0 to 8127\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   name           8128 non-null   object \n",
+      " 1   year           8128 non-null   int64  \n",
+      " 2   selling_price  8128 non-null   int64  \n",
+      " 3   km_driven      8128 non-null   int64  \n",
+      " 4   fuel           8128 non-null   object \n",
+      " 5   seller_type    8128 non-null   object \n",
+      " 6   transmission   8128 non-null   object \n",
+      " 7   owner          8128 non-null   object \n",
+      " 8   mileage        7907 non-null   object \n",
+      " 9   engine         7907 non-null   object \n",
+      " 10  max_power      7913 non-null   object \n",
+      " 11  torque         7906 non-null   object \n",
+      " 12  seats          7907 non-null   float64\n",
+      "dtypes: float64(1), int64(3), object(9)\n",
+      "memory usage: 825.6+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "name               0\n",
+       "year               0\n",
+       "selling_price      0\n",
+       "km_driven          0\n",
+       "fuel               0\n",
+       "seller_type        0\n",
+       "transmission       0\n",
+       "owner              0\n",
+       "mileage          221\n",
+       "engine           221\n",
+       "max_power        215\n",
+       "torque           222\n",
+       "seats            221\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Analyze Data\n",
+    "data.info()\n",
+    "data.describe()\n",
+    "data.columns\n",
+    "data.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Maruti Swift Dzire VDI', 'Skoda Rapid 1.5 TDI Ambition',\n",
+       "       'Honda City 2017-2020 EXi', ..., 'Tata Nexon 1.5 Revotorq XT',\n",
+       "       'Ford Freestyle Titanium Plus Diesel BSIV',\n",
+       "       'Toyota Innova 2.5 GX (Diesel) 8 Seater BS IV'], dtype=object)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show all unique names\n",
+    "data['name'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_col_to_numerical(df, col):\n",
+    "    unique_vals = df[col].unique()\n",
+    "    val_dict = {}\n",
+    "    count = 0\n",
+    "    for val in unique_vals:\n",
+    "        val_dict[val] = count\n",
+    "        count += 1\n",
+    "    df[col] = df[col].replace(val_dict)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get rid of torque\n",
+    "data = data.drop('torque', axis=1)\n",
+    "\n",
+    "# Edit every name in name column to be just 2 words\n",
+    "data['name'] = data['name'].str.split(' ').str[:2].str.join(' ')\n",
+    "data['name'] = data['name'].str.replace(' ', '_')\n",
+    "\n",
+    "# Convert categorical columns to numerical\n",
+    "data = convert_col_to_numerical(data, 'name')\n",
+    "data = convert_col_to_numerical(data, 'fuel')\n",
+    "data = convert_col_to_numerical(data, 'seller_type')\n",
+    "data = convert_col_to_numerical(data, 'transmission')\n",
+    "data = convert_col_to_numerical(data, 'owner')\n",
+    "\n",
+    "# Edit every numerical column to be just the number\n",
+    "data['mileage'] = data['mileage'].str.split(' ').str[0]\n",
+    "data['engine'] = data['engine'].str.split(' ').str[0]\n",
+    "data['max_power'] = data['max_power'].str.split(' ').str[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>selling_price</th>\n",
+       "      <th>km_driven</th>\n",
+       "      <th>fuel</th>\n",
+       "      <th>seller_type</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>owner</th>\n",
+       "      <th>mileage</th>\n",
+       "      <th>engine</th>\n",
+       "      <th>max_power</th>\n",
+       "      <th>seats</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>450000</td>\n",
+       "      <td>145500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.4</td>\n",
+       "      <td>1248</td>\n",
+       "      <td>74</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>370000</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.14</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>103.52</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>158000</td>\n",
+       "      <td>140000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>1497</td>\n",
+       "      <td>78</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>225000</td>\n",
+       "      <td>127000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>1396</td>\n",
+       "      <td>90</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>130000</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>1298</td>\n",
+       "      <td>88.2</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   name  year  selling_price  km_driven  fuel  seller_type  transmission  \\\n",
+       "0     0  2014         450000     145500     0            0             0   \n",
+       "1     1  2014         370000     120000     0            0             0   \n",
+       "2     2  2006         158000     140000     1            0             0   \n",
+       "3     3  2010         225000     127000     0            0             0   \n",
+       "4     0  2007         130000     120000     1            0             0   \n",
+       "\n",
+       "   owner mileage engine max_power  seats  \n",
+       "0      0    23.4   1248        74    5.0  \n",
+       "1      1   21.14   1498    103.52    5.0  \n",
+       "2      2    17.7   1497        78    5.0  \n",
+       "3      0    23.0   1396        90    5.0  \n",
+       "4      0    16.1   1298      88.2    5.0  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "data.head()"
    ]
   },
