--- a/CarPrice_NN/carprice.ipynb
+++ b/CarPrice_NN/carprice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4     11.5@ 4,500(kgm@ rpm)    5.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "       'Toyota Innova 2.5 GX (Diesel) 8 Seater BS IV'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,12 +301,17 @@
     "# Edit every numerical column to be just the number\n",
     "data['mileage'] = data['mileage'].str.split(' ').str[0]\n",
     "data['engine'] = data['engine'].str.split(' ').str[0]\n",
-    "data['max_power'] = data['max_power'].str.split(' ').str[0]\n"
+    "data['max_power'] = data['max_power'].str.split(' ').str[0]\n",
+    "\n",
+    "# Convert numerical columns to numerical\n",
+    "data['mileage'] = pd.to_numeric(data['mileage'])\n",
+    "data['engine'] = pd.to_numeric(data['engine'])\n",
+    "data['max_power'] = pd.to_numeric(data['max_power'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -355,9 +360,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>1248</td>\n",
-       "      <td>74</td>\n",
+       "      <td>23.40</td>\n",
+       "      <td>1248.0</td>\n",
+       "      <td>74.00</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -371,7 +376,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>21.14</td>\n",
-       "      <td>1498</td>\n",
+       "      <td>1498.0</td>\n",
        "      <td>103.52</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
@@ -385,9 +390,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>17.7</td>\n",
-       "      <td>1497</td>\n",
-       "      <td>78</td>\n",
+       "      <td>17.70</td>\n",
+       "      <td>1497.0</td>\n",
+       "      <td>78.00</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -400,9 +405,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>1396</td>\n",
-       "      <td>90</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>1396.0</td>\n",
+       "      <td>90.00</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -415,9 +420,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>16.1</td>\n",
-       "      <td>1298</td>\n",
-       "      <td>88.2</td>\n",
+       "      <td>16.10</td>\n",
+       "      <td>1298.0</td>\n",
+       "      <td>88.20</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -432,21 +437,77 @@
        "3     3  2010         225000     127000     0            0             0   \n",
        "4     0  2007         130000     120000     1            0             0   \n",
        "\n",
-       "   owner mileage engine max_power  seats  \n",
-       "0      0    23.4   1248        74    5.0  \n",
-       "1      1   21.14   1498    103.52    5.0  \n",
-       "2      2    17.7   1497        78    5.0  \n",
-       "3      0    23.0   1396        90    5.0  \n",
-       "4      0    16.1   1298      88.2    5.0  "
+       "   owner  mileage  engine  max_power  seats  \n",
+       "0      0    23.40  1248.0      74.00    5.0  \n",
+       "1      1    21.14  1498.0     103.52    5.0  \n",
+       "2      2    17.70  1497.0      78.00    5.0  \n",
+       "3      0    23.00  1396.0      90.00    5.0  \n",
+       "4      0    16.10  1298.0      88.20    5.0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name               int64\n",
+       "year               int64\n",
+       "selling_price      int64\n",
+       "km_driven          int64\n",
+       "fuel               int64\n",
+       "seller_type        int64\n",
+       "transmission       int64\n",
+       "owner              int64\n",
+       "mileage          float64\n",
+       "engine           float64\n",
+       "max_power        float64\n",
+       "seats            float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What are the datatypes\n",
+    "data.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert dataset to all floats\n",
+    "data = data.astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analyse the NAN values\n",
+    "data.isnull().sum()\n",
+    "\n",
+    "# Drop all NAN values\n",
+    "data = data.dropna()"
    ]
   },
   {
