changed classname WineDataset -> CarpriceDataset

--- a/CarPrice_NN/carprice_pytorch_datasets.ipynb
+++ b/CarPrice_NN/carprice_pytorch_datasets.ipynb
@@ -641,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class WineDataset(torch.utils.data.Dataset):\n",
+    "class CarpriceDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, x, y):                   # Konstruktor\n",
     "        self.x = torch.tensor(x.values, dtype=torch.float32)\n",
     "        self.y = torch.tensor(y.values, dtype=torch.float32)\n",
