--- a/CarPrice_NN/carprice_pytorch_datasets.ipynb
+++ b/CarPrice_NN/carprice_pytorch_datasets.ipynb
@@ -654,7 +654,7 @@
     "        return len(self.x)\n",
     "\n",
     "\n",
-    "train_dataset = WineDataset(X_train, y_train)   # Erstellt ein Dataset-Objekt, das die Trainingsdaten enthält\n",
+    "train_dataset = CarpriceDataset(X_train, y_train)   # Erstellt ein Dataset-Objekt, das die Trainingsdaten enthält\n",
     "\n",
     "x_sample, y_sample = train_dataset[0]"
    ]
